Tue Nov 12 13:24:00 UTC 2008  Simon Massey<sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Wrong macro used.

Wed Nov 12 10:52:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a few tests for WinCE/Labview

Wed Nov 12 09:35:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/ping/run_test.pl:
        * protocols/tests/HTBP/Reactor_Tests/run_test.pl:
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl:
        * protocols/tests/HTBP/Send_Recv_Tests/run_test.pl:
          Use 2 targets

Wed Nov 12 09:31:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process.pm:
          If ACE_RUNTEST_DELAY is not set, default the wait delay factor
          to 1

Wed Nov 12 09:01:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
          And more path tweaks

Wed Nov 12 08:48:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fixed fuzz error in the fuzz script itself

Wed Nov 12 08:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_WinCE.pm:
          Added HOST_ROOT and more WinCE path tweaks

Wed Nov 12 08:27:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/Process_Win32.pm:
          Removed duplicate basename

        * bin/fuzz.pl:
          Extended the run_test.pl check and enabled it. Ignore TAO and
          CIAO for the moment, we first need to update the existing
          scripts to the new test framework

Wed Nov 12 08:19:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_WinCE.pm:
          Extended path handling for WinCE

Wed Nov 12 07:47:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/README:
          Updated
